libtaskmanager: Don't request dmabuf if not supported

Previously, it specified invalid modifiers on failure, but that means that
everything is accepted.

BUG: 428284


(cherry picked from commit ad152a1042cab8335f2bd32d7e30f435324d7517)